--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,5 @@
-<h1>トップページ</h1>
+<%# <h1>トップページ</h1> %>
+<h1>top page</h1>
 <%= link_to "新規投稿", "/posts/new", method: :GET %>
 <% @posts.each do |post|%>
   <div class="post">
